--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nikhilbagal.github.io/rock-paper-scissors/",
+  "homepage": "https://nikhilbagal.github.io/rock-paper-scissors/home",
   "name": "rock-paper-game",
   "version": "0.1.0",
   "private": true,
